no fixed bg on mobile

--- a/assets/sass/styles/utility.scss
+++ b/assets/sass/styles/utility.scss
@@ -89,7 +89,8 @@ nav ul {
 }
 
 .bg-fixed {
-    background-attachment: fixed;
+    @include fixedBgAttachment;
+
 }
 
 .glow-box {
